Chapter 4 almost done. I know, I can't believe it too.

--- a/2_stateoftheart/stateofart.tex
+++ b/2_stateoftheart/stateofart.tex
@@ -214,7 +214,7 @@ Rules and deep learning models is one of the most recurrent combinations in neur
 
 Knowledge Graph Completion \citep{nickel_review_ml_kg_2016,wang_kge_survey_2017} is one of the main scenarios of neurosymbolic integration. Knowledge Graphs are composed by three elements: a set of entities $\mathcal{E}$, a set of relations $\mathcal{R}$, and the interactions between entities and relations, denoted as \textit{facts} or triples. Facts follow the fixed structure $(s,p,o)$, where $s$ and $o$ are the \textit{subject} and \textit{object} entities respectively, and $p$ is the \textit{predicate} that connects them. KGC aims to mine new facts from the existing KG information. Two main subtasks can be identified within KGC: link prediction and triple classification. In triple classification, the goal is to determine whether a potential fact $(s',p',o')$ is feasible or not. In link prediction, given an incomplete fact $(?,p,o)$ or $(s,p,?)$, the goal is to find the remaining element that maximizes the feasibility of the fact. 
 
-Figure \ref{fig:van_bekkum_kgc} depicts the design patterns (according to \cite{van_bekkum_modular_2021}) of the two main approaches for KGC. Figure \ref{fig:van_bekkum_kgc_kge} depicts the general pattern of a Knowledge Graph Embedding model for KGC. These neurosymbolic models follow a straightforward approach, where the symbolic input (KG) is converted into a tensor representation with an embedding operation. This subsymbolic representation can then be used to infer new facts, which can be then decoded back to a symbolic format. Graph Neural Networks (Figure \ref{fig:van_bekkum_kgc_gnn}) can also be used for this purpose. These models require the integration of background semantic knowledge to embed the input KG into a vectorial space. The resulting representations can then be used to train a neural network, which are then used to deduce new facts.
+Figure \ref{fig:van_bekkum_kgc} depicts the design patterns (according to \cite{van_bekkum_modular_2021}) of the two main approaches for KGC. Figure \ref{fig:van_bekkum_kgc_kge} depicts the general pattern of a Knowledge Graph Embedding model for KGC. These neurosymbolic models follow a straightforward approach, where the symbolic input (KG) is converted into a tensor representation with an embedding operation. This subsymbolic representation can be used to infer new facts, which can be then decoded back to a symbolic format. Graph Neural Networks (Figure \ref{fig:van_bekkum_kgc_gnn}) can also be used for this purpose. These models require the integration of background semantic knowledge to embed the input KG into a vectorial space. The resulting representations can be used to train a neural network, which are used to deduce new facts.
 
 \cite{leake_bringing_2020} studied the integration of case-based reasoning methodology with deep learning techniques. Case-based reasoning (CBR) is often perceived as an alternative to rule-based systems, the predominant symbolic paradigm of neurosymbolic systems. This integration is motivated by three key challenges existing in deep learning models: i) learning with fewer labeled samples, ii) learning to reason, and iii) learning to plan complex action sequences. These issues have been successfully addressed by case-based reasoning models, thus motivating the integration of both paradigms. Such is the case of the work by \cite{marie_segmentation_2019}, where a CBR model is combined with a Convolutional Neural Network to segment medical images. This proposal presents CBR as a solution to quality data insufficiency, serving as a preprocessing and augmentation mechanism for the network. \cite{lamy_explainable_2019} studied the possibility of exploiting CBR models' interpretability to explain the predictions of a deep neural network.
 
@@ -248,7 +248,7 @@ While \textit{explainability} is the general term used to describe these approac
     \item \textit{Transparency} refers to the capacity of a model to be fully understandable by itself.
     \item \textit{Interpretability} describes the capacity to provide an interpretation of the inference process that can be understandable by humans. 
     \item \textit{Explainability} is associated with the idea of explainations serving as an interface between humans and the AI system, which must be accurate and comprehensible by humans \citep{guidotti_explainability_2018}.
-    \item \textit{Understandability} relates to the quality of a model to be understandable by humans by design, without the need of explaining its internal processes.
+    \item \textit{Understandability} relates to the quality of a model to be human-understandable by design, without the need of explaining its internal processes.
     \item \textit{Comprehensibility} denotes the ability of a model to represent its learning process in a human-understandable manner.
 \end{itemize}
 
@@ -258,7 +258,7 @@ More recently, \cite{phillips_explainability_2021} outlined the \textit{four pri
     \item \textit{Explaination:} The system must supply evidence or reasoning for each decision made by the system.
     \item \textit{Meaningfulness:} Explanations provided by the system must be meaningful and understandable by its users.
     \item \textit{Accuracy:} The explanation provided by the AI system must be an accurate reflection of the system's behaviour.
-    \item \textit{Knowledge Limits:} Cases where the system can not operate must be identified, as their explanations may be misleading of the behaviour of the system.
+    \item \textit{Knowledge Limits:} Cases where the system can not operate must be identified, as their explanations may be misleading of the behavior of the system.
     
 \end{itemize}
 
