--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -11,3 +11,5 @@ TBD
 
 
 %%%CONSIDERAMOS LOS METODOS DESDE CUATRO PERSPECTIVAS: LIMITACIONES, CONSIDERACIONES, CONSTRAINTS, IMPACTO.
+
+%%%Los diagramas de las propuestas se van a hacer en notación van bekkum
