Chapter 4 signed, sealed and (not) delivered yet but almost! Slowly but steadily getting there. Wherever 'there' is.

--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -1,9 +1,23 @@
 \chapter{Methodology}
 
 TBD
-%Se consdera poco la integracion de subsimbolico a simbolico como razonamiento y no como modelo. 
 
+%LIMITACIONES SOTA:
+%Se consdera poco la integracion de subsimbolico a simbolico como razonamiento y no como modelo. 
+%%
 % Siempre suele ser entre reglas-redes de neuronas. No considera las limitaciones existentes que se tienen que cumplir para que la integración sea correcta. 
+
+%HIPOTESIS:
+
+
+%%OBJETIVOS
+% Definir los parámetros necesarios para llevar a cabo la integración de KBS y DL
+
+
+%%ASSUMPTIONS
+% Los métodos propuestos sólo consideran la integración de KBS y DL entendiendo como parte de estas categorías los modelos del SOTA en esta parte
+% Los parámetros descritos pueden ser modificados en el futuro si las limitaciones existentes en alguno de los modelos fueran resueltas sin la necesidad de integración
+
 
 %%RESTRICCIONES
 
@@ -13,3 +27,7 @@ TBD
 %%%CONSIDERAMOS LOS METODOS DESDE CUATRO PERSPECTIVAS: LIMITACIONES, CONSIDERACIONES, CONSTRAINTS, IMPACTO.
 
 %%%Los diagramas de las propuestas se van a hacer en notación van bekkum
+
+%%Contribuciones: 
+% 1. Método de introducción de KBS en DL
+% 2. Método de inicialización basado en semántica para modelos de KGE
