Finishing chapter 5 and corrected chapter 4.  I'm running for my life and it shows.

--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -7,6 +7,8 @@ TBD
 %%
 % Siempre suele ser entre reglas-redes de neuronas. No considera las limitaciones existentes que se tienen que cumplir para que la integración sea correcta. 
 
+%%PLANTEAMIENTO DEL PROBLEMA
+
 %HIPOTESIS:
 
 
@@ -31,3 +33,5 @@ TBD
 %%Contribuciones: 
 % 1. Método de introducción de KBS en DL
 % 2. Método de inicialización basado en semántica para modelos de KGE
+% 3. Metodo de introduccion de DL a KBS
+% 4. Framework modular y adaptable a diferentes entornos de CBR mejorado con DL para la generacion de documentos.
