--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -4858,3 +4858,23 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pages = {96--99},
 	file = {Full Text PDF:/home/eamador/Zotero/storage/HN548ZPL/Valiant - 2003 - Three problems in computer science.pdf:application/pdf},
 }
+
+
+@article{DBLP:journals/ijimai/Amador-Dominguez21,
+  author    = {Elvira Amador{-}Dom{\'{\i}}nguez and
+               Emilio Serrano and
+               Daniel Manrique and
+               Javier Bajo},
+  title     = {A Case-Based Reasoning Model Powered by Deep Learning for Radiology
+               Report Recommendation},
+  journal   = {Int. J. Interact. Multim. Artif. Intell.},
+  volume    = {7},
+  number    = {2},
+  pages     = {15},
+  year      = {2021},
+  url       = {https://doi.org/10.9781/ijimai.2021.08.011},
+  doi       = {10.9781/ijimai.2021.08.011},
+  timestamp = {Fri, 04 Feb 2022 16:57:52 +0100},
+  biburl    = {https://dblp.org/rec/journals/ijimai/Amador-Dominguez21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
