--- a/Thesis.tex
+++ b/Thesis.tex
@@ -589,7 +589,7 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 
 \input{4_kbsintegrationdl/kbsintegrationdl}
 
-%\input{5_dlintegrationkbs/dlintegrationkbs}
+\input{5_dlintegrationkbs/dlintegrationkbs}
 
 %\input{6_kbsextractiondl/kbsextractiondl}
 
