First draft of ch.5 done! Olé olé, viva viva! Still going through the revisions of Ch.4

--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -3,13 +3,29 @@
 
 \begin{acknowledgementslong} %uncommenting this line, gives a different acknowledgements heading
 %\begin{acknowledgements}      %this creates the heading for the acknowlegments
-
+%Podría escribir que intentaré ser breve, pero quien esté leyendo esto seguramente me conoce lo suficiente para saber que no está en mi naturaleza. Y qué suerte que sea así, porque significa que tengo mucho que agradecer.
 %%
-%%HAY QUE AGRADECER A LA UPM POR LA BECA Y AL GRUPO DE FRANK, SOBRETODO A PETER
+
+%% El mayor de mis agradecimientos es sin duda para mis directores: Emilio y Daniel. Si ya fue un privilegio teneros como profesores, teneros como directores ha sido un verdadero regalo. 
+
+
+%%HAY QUE AGRADECER  AL GRUPO DE FRANK, SOBRETODO A PETER
 %%A SARA Y A LA GENTE DE ÁMSTERDAM
-%A Sara, gracias por tu generosidad, por haber sido 'casa' lejos de casa, por haber
+%Sara, gracias por tu generosidad, y por haber sido mi hogar lejos de casa. 
 
+%%A LA GENTE DEL LABO QUE NO ESTÁ, LAS CHICAS DE LA PISCINA DE TERUEL
 
+%%A LOS AMIGOS QUE HICISTE, A LOS QUE RECUPERASTE
+
+%A IRENE
+
+% Por supuesto, gracias a Tamara, por ser la hermana que la vida me regaló. Gracias por ser, por estar de forma incondicional, por tu infinita generosidad y por darme una segunda familia y unos amigos maravillosos. Una vida entera va a ser corta para agradecerte tanto.
+
+%A mi abuela Geni, que aunque
+
+%Mamá, siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando).  
+
+%A mi padre, Alberto, que además de su nariz y su pasión por la música, me enseñó que relativizar los problemas es el primer paso para resolverlos, y la importancia que tiene disfrutar de la vida. Allí donde me esperes, sé que estás orgulloso. 
 
 %Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
 % 
