--- a/0_frontmatter/dedication.tex
+++ b/0_frontmatter/dedication.tex
@@ -1,9 +1,9 @@
 % Thesis Dedictation ---------------------------------------------------
 
 \begin{dedication} %this creates the heading for the dedication page
-%\begin{flushright}
-
-%\end{flushright}
+\begin{flushright}
+%\textit{A mi estrella.}
+\end{flushright}
 
 
 
