--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -8,11 +8,17 @@
 % required to print nomenclature name to page header
 \markboth{\MakeUppercase{\nomname}}{\MakeUppercase{\nomname}}
 
-
+\nomenclature[CBR]{CBR}{Case-Based Reasoning}
+\nomenclature[DL]{DL}{Deep Learning}
+\nomenclature[KGC]{KGC}{Knowledge Graph Completion}
+\nomenclature[KGE]{KGE}{Knowledge Graph Embedding(s)}
+\nomenclature[KBS]{KBS}{Knowledge-Based System(s)}
+\nomenclature[NER]{NER}{Named Entity Recognition}
+\nomenclature[NLP]{NLP}{Natural Language Processing}
 % ----------------------- contents from here ------------------------
 
 % chemicals
-%\nomenclature{DAPI}{4',6-diamidino-2-phenylindole; a fluorescent stain that binds strongly to DNA and serves to marks the nucleus in fluorescence microscopy} 
+\nomenclature{DAPI}{4',6-diamidino-2-phenylindole; a fluorescent stain that binds strongly to DNA and serves to marks the nucleus in fluorescence microscopy} 
 %\nomenclature{DEPC}{diethyl-pyro-carbonate; used to remove RNA-degrading enzymes (RNAases) from water and laboratory utensils}
 %\nomenclature{DMSO}{dimethyl sulfoxide; organic solvent, readily passes through skin, cryoprotectant in cell culture}
 %\nomenclature{EDTA}{Ethylene-diamine-tetraacetic acid; a chelating (two-pronged) molecule used to sequester most divalent (or trivalent) metal ions, such as calcium (Ca$^{2+}$) and magnesium (Mg$^{2+}$), copper (Cu$^{2+}$), or iron (Fe$^{2+}$ / Fe$^{3+}$)}
