--- a/4_kbsintegrationdl/kbsintegrationdl.tex
+++ b/4_kbsintegrationdl/kbsintegrationdl.tex
@@ -1,7 +1,7 @@
 \chapter{Knowledge-Based System Integration into a Deep Learning Environment}\label{chap:kbsintegrationdl}
 
 %Motivaciones de esto: Incrementar capacidad de generalización, reducir número de recursos, aumento de la interpretabilidad del modelo. Restricciones de esto: 
-This chapter focuses the first of the integrations contemplated in this thesis: the introduction of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific methodological parameters of this integration, along with the relations between them. This methodology is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general methodology, providing an insights on the specific methodological parameters featured in the integration. Section \ref{4_sec:summary} summarizes the content of the chapter. \blfootnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., \& Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018}
+This chapter focuses the first of the integrations contemplated in this thesis: the introduction of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific method parameters of this integration, along with the relations between them. This design is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general design method, providing insights on the specific methodological parameters featured in the integration. Section \ref{4_sec:summary} summarizes the content of the chapter. \blfootnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., \& Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018}
 
 \begin{figure}[ht]
     \centering
@@ -482,7 +482,7 @@ Semantic-based initialization instantiates the introductory integration method p
 \end{itemize}
 \subsection{Restrictions}
 \begin{itemize}
-    \item \textbf{KGE model performance must not decrease.} One of the general restrictions of the proposed methodology, \ref{kbsintrodl_R_performance} states that to perform KBS introduction, it must be ensured that the performance of the primary DL model will not decrease. This restriction is satisfied in the proposed use case, as none of the studied KGE models experience a decrement on its performance metrics. 
+    \item \textbf{KGE model performance must not decrease.} One of the general restrictions of the proposed method, \ref{kbsintrodl_R_performance} states that to perform KBS introduction, it must be ensured that the performance of the primary DL model will not decrease. This restriction is satisfied in the proposed use case, as none of the studied KGE models experience a decrement on its performance metrics. 
     
     \item \textbf{KGE model complexity does not increase.} The KGE models studied in this use case all have a complexity order of $\mathcal{O}(d)$, where $d$ is the dimension of the embeddings. However, this is  not the case for every KGE model. In Graph Neural Networks, their complexity order is not related to the dimension of the embedding, but to the number of entities and relations in the graph, which can lead to considerably more complex models. Semantic-based initialization is performed offline, thus ensuring that the complexity of the model remains unchanged (\ref{kbsintrodl_R_complexity}). Moreover, as it is performed independently from the KGE model, it does not increase the required training resources (\ref{kbsintrodl_R_resource}).
 \end{itemize}
